--- a/Makefile.in
+++ b/Makefile.in
@@ -531,12 +531,16 @@ install-arch-indep: install-leim install-info install-man ${INSTALL_ARCH_INDEP_E
 	       tar -xvf - && cat > /dev/null) || exit 1; \
 	  [ "$${dir}" != "${srcdir}/etc" ] || rm -f $${dest}/DOC* ; \
 	  for subdir in `find $${dest} -type d -print` ; do \
-	    rm -f $${subdir}/.gitignore $${subdir}/.arch-inventory \
-	      $${subdir}/.DS_Store  $${subdir}/ChangeLog* \
-	      $${subdir}/\#*        $${subdir}/.\#*  \
-	      $${subdir}/*~         $${subdir}/*.orig ; \
+	    rm -f $${subdir}/.gitignore ; \
+	    rm -f $${subdir}/.arch-inventory ; \
+	    rm -f $${subdir}/.DS_Store ; \
+	    rm -f $${subdir}/\#* ; \
+	    rm -f $${subdir}/.\#* ; \
+	    rm -f $${subdir}/*~ ; \
+	    rm -f $${subdir}/*.orig ; \
+	    rm -f $${subdir}/ChangeLog* ; \
 	    [ "$${dir}" != "${srcdir}/etc" ] && \
-	     rm -f $${subdir}/[mM]akefile*[.-]in $${subdir}/[mM]akefile ; \
+	      rm -f $${subdir}/[mM]akefile*[.-]in $${subdir}/[mM]akefile ; \
 	  done ; \
 	  find $${dest} -exec chown $${installuser} {} ';' ;\
 	done
