--- a/configure.in
+++ b/configure.in
@@ -1950,8 +1950,10 @@ if test "${with_dbus}" = "yes"; then
      LIBS="$LIBS $DBUS_LIBS"
      AC_DEFINE(HAVE_DBUS, 1, [Define to 1 if using D-Bus.])
      dnl dbus_watch_get_unix_fd has been introduced in D-Bus 1.1.1.
-     dnl dbus_validate_* have been introduced in D-Bus 1.5.12.
+     dnl dbus_type_is_valid and dbus_validate_* have been introduced in
+     dnl D-Bus 1.5.12.
      AC_CHECK_FUNCS(dbus_watch_get_unix_fd \
+		    dbus_type_is_valid \
 		    dbus_validate_bus_name \
                     dbus_validate_path \
 		    dbus_validate_interface \
