Handle availability of MagickMergeImageLayers and MagickExportImagePixels
* configure.in: Check for MagickMergeImageLayers.

* src/image.c (imagemagick_load_image): Use MagickFlattenImage if
MagickMergeImageLayers is undefined.  Use pixel pusher loop if
MagickExportImagePixels is undefined.

--- a/configure.in
+++ b/configure.in
@@ -1855,6 +1855,7 @@ if test "${HAVE_X11}" = "yes"; then
       CFLAGS="$CFLAGS $IMAGEMAGICK_CFLAGS"
       LIBS="$IMAGEMAGICK_LIBS $LIBS"
       AC_CHECK_FUNCS(MagickExportImagePixels)
+      AC_CHECK_FUNCS(MagickMergeImageLayers)
     fi
   fi
 fi
