--- a/configure.in
+++ b/configure.in
@@ -3125,6 +3125,11 @@ case $opsys in
   ;;
 esac
 
+case $opsys in
+  gnu-kfreebsd) opsysfile="s/gnu-linux.h" ;;
+  openbsd) opsysfile="s/netbsd.h" ;;
+esac
+
 # Set up the CFLAGS for real compilation, so we can substitute it.
 CFLAGS="$REAL_CFLAGS"
 CPPFLAGS="$REAL_CPPFLAGS"
