--- a/lib/makefile.w32-in
+++ b/lib/makefile.w32-in
@@ -24,10 +24,14 @@ LOCAL_FLAGS	= -DHAVE_CONFIG_H=1 -I. -I../nt/inc -I../src
 LIBS 		=
 
 GNULIBOBJS = $(BLD)/dtoastr.$(O) \
+	     $(BLD)/dtotimespec.$(O)  \
 	     $(BLD)/getopt.$(O)  \
 	     $(BLD)/getopt1.$(O) \
+	     $(BLD)/gettime.$(O) \
 	     $(BLD)/strftime.$(O) \
 	     $(BLD)/time_r.$(O) \
+	     $(BLD)/timespec-add.$(O) \
+	     $(BLD)/timespec-sub.$(O) \
 	     $(BLD)/md5.$(O) \
 	     $(BLD)/sha1.$(O) \
 	     $(BLD)/sha256.$(O) \
@@ -69,6 +73,15 @@ $(BLD)/dtoastr.$(O) : \
 	$(EMACS_ROOT)/src/s/ms-w32.h \
 	$(EMACS_ROOT)/src/config.h
 
+$(BLD)/dtotimespec.$(O) : \
+	$(SRC)/dtotimespec.c \
+	$(SRC)/intprops.h \
+	$(SRC)/timespec.h \
+	$(EMACS_ROOT)/nt/inc/sys/time.h \
+	$(EMACS_ROOT)/nt/inc/sys/stat.h \
+	$(EMACS_ROOT)/src/s/ms-w32.h \
+	$(EMACS_ROOT)/src/config.h
+
 $(BLD)/getopt.$(O) : \
 	$(SRC)/getopt.c \
 	$(SRC)/getopt.h \
@@ -87,6 +100,14 @@ $(BLD)/getopt1.$(O) : \
 	$(EMACS_ROOT)/src/s/ms-w32.h \
 	$(EMACS_ROOT)/src/config.h
 
+$(BLD)/gettime.$(O) : \
+	$(SRC)/gettime.c \
+	$(SRC)/timespec.h \
+	$(EMACS_ROOT)/nt/inc/sys/time.h \
+	$(EMACS_ROOT)/nt/inc/sys/stat.h \
+	$(EMACS_ROOT)/src/s/ms-w32.h \
+	$(EMACS_ROOT)/src/config.h
+
 $(BLD)/strftime.$(O) : \
 	$(SRC)/strftime.c \
 	$(SRC)/strftime.h \
@@ -97,6 +118,24 @@ $(BLD)/strftime.$(O) : \
 
 $(BLD)/time_r.$(O) : \
 	$(SRC)/time_r.c \
+	$(EMACS_ROOT)/nt/inc/sys/stat.h \
+	$(EMACS_ROOT)/src/s/ms-w32.h \
+	$(EMACS_ROOT)/src/config.h
+
+$(BLD)/timespec-add.$(O) : \
+	$(SRC)/timespec-add.c \
+	$(SRC)/intprops.h \
+	$(SRC)/timespec.h \
+	$(EMACS_ROOT)/nt/inc/sys/time.h \
+	$(EMACS_ROOT)/nt/inc/sys/stat.h \
+	$(EMACS_ROOT)/src/s/ms-w32.h \
+	$(EMACS_ROOT)/src/config.h
+
+$(BLD)/timespec-sub.$(O) : \
+	$(SRC)/timespec-sub.c \
+	$(SRC)/intprops.h \
+	$(SRC)/timespec.h \
+	$(EMACS_ROOT)/nt/inc/sys/time.h \
 	$(EMACS_ROOT)/nt/inc/sys/stat.h \
 	$(EMACS_ROOT)/src/s/ms-w32.h \
 	$(EMACS_ROOT)/src/config.h
